--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Hello
+The uploaded files follow the progress I've made to complete a year-long project offered from the IEEE student branch at UCLA titled Pocket Racers.
